2000-12-28 Marc W. Mengel <mengel@fnal.gov>
	* changer-src/chg-juke.sh.in: New File
	* changer-src/Makefile.am: Added support for chg-juke.
	* docs/TAPE.CHANGERS: Likewise.
	* configure.in: Likewise.

2000-12-24 John R. Jackson <jrj@purdue.edu>

	* server-src/getconf.c: Fix free() of static text string (BUGGY) when
	  the parameter being looked up is bad.

2000-12-23 David Wolfskill  <dhw@whistle.com>

        * server-src/amcheck.c (start_server_check): Change directory
          writable check to be for the tapelist directory instead of
	  the config file directory.  Remove config file directory test.
        * man/amcheck.8.in: Add mention of tapelist directory and do
	  some other directory writable cleanup.

2000-12-12 John R. Jackson <jrj@purdue.edu>

	* client-src/sendbackup-gnutar.c: Fix regex pattern to accept blanks
	  or tabs.

2000-12-12 John R. Jackson <jrj@purdue.edu>

	* Makefile.am: Work around problem with automake 1.4 not including
	  pkgdata_DATA.
	* docs/Makefile.am: Include RAIT and VTAPE-API in distribution.
	  Work around problem with automake 1.4 not including pkgdata_DATA.
	* tape-src/rait.h: Renamed to rait.h.
	* tape-src/rait.c: Renamed to rait.c.
	* tape-src/output-rait.h: Renamed from rait.h.
	* tape-src/output-rait.c: Renamed from rait.c.
	* tape-src/Makefile.am: Reflect the new rait.[ch] names.
	* tape-src/tapeio.c: Use output-rait.h name.  Minor typo changes.

2000-12-08 Marc Mengel <mengel@fnal.gov>

	* docs/RAIT: New file.
	* docs/VTAPE-API: New file.
	* tape-src/rait.c: New File providing RAIT virtual tape type.
	* tape-src/tapeio.c: Major Surgery.
	  (vtable): New static table of virtual tape types.
	  (fdtable): New static table mapping file descriptors.
	  (tapefd_fsf_ioctl): Renamed tapefd_fsf, with added ioctl argument.
	  (tapefd_rewind_ioctl): Likewise.
	  (tapefd_unload_ioctl): Likewise.
	  (tapefd_weof_ioctl): Likewise.
	  (tapefd_status_ioctl): Likewise.
	  (tape_open): Now is a virtual tape table lookup and call.