@@ -1,3 +1,8 @@
+2000-11-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/planner.c (analyze_estimate): pick incremental level
+        if no estimate of level 0.
+
 2000-12-28 Marc W. Mengel <mengel@fnal.gov>
 	* changer-src/chg-juke.sh.in: New File
 	* changer-src/Makefile.am: Added support for chg-juke.
